# gpt-handler

./: README.md  main.py  pyproject.toml  requirements.txt
src/gpt/: __main__.py
tests/: test-code.py
